# fastapi-services-oauth2

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
app/: cli.py  const.py  exc.py  main.py
app/backend/: config.py  config.yml  database.py  session.py
app/models/: auth.py  base.py  foo.py  movies.py
app/routers/: auth.py  foo.py  movies.py
app/schemas/: auth.py  base.py  foo.py  movies.py
app/services/: auth.py  base.py  foo.py  movies.py
docs/: README.md
tests/: conftest.py  test_auth.py  test_models.py  test_movies.py
